force-app/main/default/objects/Certification_Held__c/Certification_Held__c.object-meta.xml
<CustomObject>
    <label>Certification Held</label>
    <nameField>
        <displayFormat>CERTIFICATION-{00000}</displayFormat>
        <label>Certification Held Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certification Held</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>