force-app/main/default/objects/Certification_Held__c/fields/Certified_Professional__c.field-meta.xml
<CustomField>
    <fullName>Certified_Professional__c</fullName>
    <description>Contact who is certified.</description>
    <label>Certified Professional</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Certification Held</relationshipLabel>
    <relationshipName>Certification_Held</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>