force-app/main/default/objects/Certification_Held__c/fields/Certified_Professional_Name__c.field-meta.xml
<CustomField>
    <fullName>Certified_Professional_Name__c</fullName>
    <formula>HYPERLINK( Certified_Professional__r.Id, TRIM( Certified_Professional__r.FirstName &amp;&quot;,&quot;&amp; Certified_Professional__r.LastName ), &quot;_self &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certified Professional Name</label>
    <type>Text</type>
</CustomField>